2004-05-22  Kingpin  <mthurn@verizon.net>

	* t/reuters.t: new file

	* lib/WWW/Search/Reuters.pm: new file

	* lib/WWW/Search/AP.pm (native_setup_search): all new CGI params

	* lib/WWW/Search/WashPost.pm (native_setup_search): all new URL and CGI params
	(parse_tree): all new HTML format

2004-02-20  Kingpin  <mthurn@verizon.net>

	* t/ap.t: make 1-page queries TODO, because they're unreliable
	* t/washpost.t: make 1-page queries TODO, because they're unreliable

2004-02-07  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/WashPost.pm: updated the version number

2003-12-16  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/News.pm: new file

2003-12-13  Kingpin  <mthurn@verizon.net>

	* t/washpost.t (my_test): convert to Test::More

	* lib/WWW/Search/AP.pm (native_setup_search): fix CGI arguments

	* lib/WWW/Search/WashPost.pm (native_setup_search): fix CGI arguments
	(parse_tree): fix 'Next' link pattern

2002-12-27  Kingpin  <mthurn@carbon>

	* lib/WWW/Search/WashPost.pm (parse_tree): updated for new output format

2002-07-18  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/WWW/Search/WashPost.pm (parse_tree): remove undef warnings
	(native_setup_search): use non-robot UserAgent

	* delete WashTech.pm because website no longer exists

	* delete t/washtech.t
		
	* delete Newsbytes.pm because website no longer exists
	
	* delete t/newsbytes.t

	